[package]
name = "api-routes"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features=["json"] }
rocket_cors = "0.6.0"
serde ={ version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

types = { path = "../../types" }
common-macros = { path = "../../../macros" }
storage = { path = "../../storage", package = "storage-service" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
